@@ -3,6 +3,7 @@
 appropriate
 * Fixed uncommon pledge failures in `expr`, `cut`, `cmp` and `diff`
 * Moved libcobalt into a separate repository
+* Moved `entropy` into a separate repo
 
 0.13 - Nov 6 2023
 * Added OpenBSD `pledge()`
